Updated to work in OCP Jenkins